--- a/estimands.html
+++ b/estimands.html
@@ -1013,6 +1013,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.3.2" data-path="mediation.html"><a href="mediation.html#intermediate-confounders"><i class="fa fa-check"></i><b>1.3.2</b> Intermediate confounders</a></li>
 </ul></li>
 <li class="chapter" data-level="1.4" data-path="mediation.html"><a href="mediation.html#counterfactuals"><i class="fa fa-check"></i><b>1.4</b> Counterfactuals</a><ul>
+<li class="chapter" data-level="" data-path="mediation.html"><a href="mediation.html#we-will-constantly-use-the-following-counterfactual-variables"><i class="fa fa-check"></i>We will constantly use the following counterfactual variables:</a></li>
 <li class="chapter" data-level="1.4.1" data-path="mediation.html"><a href="mediation.html#how-are-counterfactuals-defined"><i class="fa fa-check"></i><b>1.4.1</b> How are counterfactuals defined?</a></li>
 </ul></li>
 </ul></li>
@@ -1061,13 +1062,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.1.5" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#an-example-of-the-bias-of-a-g-computation-estimator-of-the-natural-direct-effect"><i class="fa fa-check"></i><b>5.1.5</b> An example of the bias of a g-computation estimator of the natural direct effect</a></li>
 <li class="chapter" data-level="5.1.6" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-g-computation-with-data-adaptive-regression"><i class="fa fa-check"></i><b>5.1.6</b> Pros and cons of g-computation with data-adaptive regression</a></li>
 </ul></li>
-<li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation-or-correcting-the-bias-of-g-computation-estimators"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation (or correcting the bias of g-computation estimators)</a></li>
+<li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><i class="fa fa-check"></i><b>6</b> Using the EIF to construct an estimator: the case of the natural direct effect</a><ul>
 <li class="chapter" data-level="6.1" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#natural-direct-effect"><i class="fa fa-check"></i><b>6.1</b> Natural direct effect</a><ul>
 <li class="chapter" data-level="6.1.1" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#the-efficient-influence-function-for-the-nde"><i class="fa fa-check"></i><b>6.1.1</b> The efficient influence function for the NDE</a></li>
 <li class="chapter" data-level="6.1.2" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#how-to-compute-the-one-step-estimator-akin-to-augmented-ipw"><i class="fa fa-check"></i><b>6.1.2</b> How to compute the one-step estimator (akin to Augmented IPW)</a></li>
 <li class="chapter" data-level="6.1.3" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#performance-of-the-one-step-estimator-in-a-small-simulation-study"><i class="fa fa-check"></i><b>6.1.3</b> Performance of the one-step estimator in a small simulation study</a></li>
+<li class="chapter" data-level="6.1.4" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#a-note-about-targeted-minimum-loss-based-estimation-tmle"><i class="fa fa-check"></i><b>6.1.4</b> A note about targeted minimum loss-based estimation (TMLE)</a></li>
+<li class="chapter" data-level="6.1.5" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#a-note-about-cross-fitting"><i class="fa fa-check"></i><b>6.1.5</b> A note about cross-fitting</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="r-packages-for-estimation-of-the-causal-indirect-effects.html"><a href="r-packages-for-estimation-of-the-causal-indirect-effects.html"><i class="fa fa-check"></i><b>7</b> <code>R</code> packages for estimation of the causal (in)direct effects</a><ul>
@@ -1116,17 +1119,17 @@ FIGURE 2.1: Directed acyclic graph under <em>no intermediate confounders</em> of
 </div>
 <div id="controlled-direct-effects" class="section level2">
 <h2><span class="header-section-number">2.1</span> Controlled direct effects</h2>
-<ul>
-<li>Set the mediator to a reference value <span class="math inline">\(M=m\)</span> uniformly for everyone in the
-population</li>
-<li>Compare <span class="math inline">\(A=1\)</span> vs <span class="math inline">\(A=0\)</span> with <span class="math inline">\(M=m\)</span> fixed</li>
-</ul>
 <p><span class="math display">\[\psi_{\text{CDE}} = \E(Y_{1,m} - Y_{0,m}) \]</span></p>
 <!--
 ID: Reminder to ask Kara about the purpose of these cartoons
 KER: !!
 -->
 <p><img src="img/graphic4a3.png" width="50%" style="display: block; margin: auto;" /></p>
+<ul>
+<li>Set the mediator to a reference value <span class="math inline">\(M=m\)</span> uniformly for everyone in the
+population</li>
+<li>Compare <span class="math inline">\(A=1\)</span> vs <span class="math inline">\(A=0\)</span> with <span class="math inline">\(M=m\)</span> fixed</li>
+</ul>
 <div id="identification-assumptions" class="section level3">
 <h3><span class="header-section-number">2.1.1</span> Identification assumptions:</h3>
 <ul>
@@ -1199,7 +1202,7 @@ indirect counterparts?</em></p>
 <li>Recall the definition of the nested counterfactual</li>
 </ul>
 <p><span class="math display">\[\begin{equation*}
-    Y_{1, M_0} = f_Y(W, 1, Z_1, M_0, U_Y)
+    Y_{1, M_0} = f_Y(W, 1, M_0, U_Y)
 \end{equation*}\]</span></p>
 <ul>
 <li><p>Interpreted as <em>the outcome for an individual in a hypothetical world where
@@ -1369,12 +1372,13 @@ it's useful. Espeically because i think we do essentially adjust for z in our
 sequential regressions if we are estimating controlled direct effects in this
 environment, right?
 -->
-<p>Intuitively:</p>
-<ul>
-<li><span class="math inline">\(Z\)</span> is a confounder of the relation <span class="math inline">\(M \rightarrow Y\)</span>, which requires
-adjustment</li>
-<li>But <span class="math inline">\(Z\)</span> is on the pathway <span class="math inline">\(A\rightarrow Y\)</span>, which precludes adjustment</li>
-</ul>
+<!--
+Intuitively:
+
+- $Z$ is a confounder of the relation $M \rightarrow Y$, which requires
+  adjustment
+- But $Z$ is on the pathway $A\rightarrow Y$, which precludes adjustment
+-->
 <p>Note: CDEs are still identified in this setting. They can be identified and
 estimated similarly to a longitudinal data sructure with a two-time-point
 intervention.</p>
@@ -1391,6 +1395,9 @@ lost on people
 <li>Define the counterfactual <span class="math inline">\(Y_{1,G_0}\)</span> as the counterfactual
 variable in a hypothetical world where <span class="math inline">\(A\)</span> is set <span class="math inline">\(A=1\)</span> and <span class="math inline">\(M\)</span> is
 set to <span class="math inline">\(M=G_0\)</span> with probability one.</li>
+</ul>
+<p><img src="img/graphic4b.png" width="50%" style="display: block; margin: auto;" /></p>
+<ul>
 <li>Define <span class="math inline">\(Y_{0,G_0}\)</span> and <span class="math inline">\(Y_{1,G_1}\)</span> similarly</li>
 <li>Then we can define:
 <span class="math display">\[\begin{equation*}
@@ -1404,7 +1411,6 @@ even if it is different from the ATE <span class="math inline">\(\E[Y_{1} - Y_{0
 <li>We gain in the ability to solve a problem, but lose in terms of interpretation
 of the causal effect (cannot decompose the ATE)</li>
 </ul>
-<p><img src="img/graphic4b.png" width="50%" style="display: block; margin: auto;" /></p>
 <div id="an-alternative-definition-of-the-effects" class="section level3">
 <h3><span class="header-section-number">2.3.1</span> An alternative definition of the effects:</h3>
 <ul>
@@ -1522,7 +1528,12 @@ effect.</li>
 ID: Can we redo the below table fixing the G notation? Also, is it possible to
 fix the formatting? (currently not very amenable to a presentation I think)
 -->
-<p><img src="img/table1.png" width="125%" style="display: block; margin: auto;" /></p>
+<div class="figure" style="text-align: center"><span id="fig:unnamed-chunk-21"></span>
+<img src="img/table1.png" alt="Excerpted from @rudolph2019causal" width="125%" />
+<p class="caption">
+FIGURE 2.3: Excerpted from <span class="citation">Rudolph et al. (2019)</span>
+</p>
+</div>
 
 </div>
 </div>
