--- a/mediation.html
+++ b/mediation.html
@@ -1013,6 +1013,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.3.2" data-path="mediation.html"><a href="mediation.html#intermediate-confounders"><i class="fa fa-check"></i><b>1.3.2</b> Intermediate confounders</a></li>
 </ul></li>
 <li class="chapter" data-level="1.4" data-path="mediation.html"><a href="mediation.html#counterfactuals"><i class="fa fa-check"></i><b>1.4</b> Counterfactuals</a><ul>
+<li class="chapter" data-level="" data-path="mediation.html"><a href="mediation.html#we-will-constantly-use-the-following-counterfactual-variables"><i class="fa fa-check"></i>We will constantly use the following counterfactual variables:</a></li>
 <li class="chapter" data-level="1.4.1" data-path="mediation.html"><a href="mediation.html#how-are-counterfactuals-defined"><i class="fa fa-check"></i><b>1.4.1</b> How are counterfactuals defined?</a></li>
 </ul></li>
 </ul></li>
@@ -1061,13 +1062,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.1.5" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#an-example-of-the-bias-of-a-g-computation-estimator-of-the-natural-direct-effect"><i class="fa fa-check"></i><b>5.1.5</b> An example of the bias of a g-computation estimator of the natural direct effect</a></li>
 <li class="chapter" data-level="5.1.6" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-g-computation-with-data-adaptive-regression"><i class="fa fa-check"></i><b>5.1.6</b> Pros and cons of g-computation with data-adaptive regression</a></li>
 </ul></li>
-<li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation-or-correcting-the-bias-of-g-computation-estimators"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation (or correcting the bias of g-computation estimators)</a></li>
+<li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><i class="fa fa-check"></i><b>6</b> Using the EIF to construct an estimator: the case of the natural direct effect</a><ul>
 <li class="chapter" data-level="6.1" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#natural-direct-effect"><i class="fa fa-check"></i><b>6.1</b> Natural direct effect</a><ul>
 <li class="chapter" data-level="6.1.1" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#the-efficient-influence-function-for-the-nde"><i class="fa fa-check"></i><b>6.1.1</b> The efficient influence function for the NDE</a></li>
 <li class="chapter" data-level="6.1.2" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#how-to-compute-the-one-step-estimator-akin-to-augmented-ipw"><i class="fa fa-check"></i><b>6.1.2</b> How to compute the one-step estimator (akin to Augmented IPW)</a></li>
 <li class="chapter" data-level="6.1.3" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#performance-of-the-one-step-estimator-in-a-small-simulation-study"><i class="fa fa-check"></i><b>6.1.3</b> Performance of the one-step estimator in a small simulation study</a></li>
+<li class="chapter" data-level="6.1.4" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#a-note-about-targeted-minimum-loss-based-estimation-tmle"><i class="fa fa-check"></i><b>6.1.4</b> A note about targeted minimum loss-based estimation (TMLE)</a></li>
+<li class="chapter" data-level="6.1.5" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#a-note-about-cross-fitting"><i class="fa fa-check"></i><b>6.1.5</b> A note about cross-fitting</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="r-packages-for-estimation-of-the-causal-indirect-effects.html"><a href="r-packages-for-estimation-of-the-causal-indirect-effects.html"><i class="fa fa-check"></i><b>7</b> <code>R</code> packages for estimation of the causal (in)direct effects</a><ul>
@@ -1105,26 +1108,44 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">Chapter 1</span> Causal mediation analysis intro</h1>
 <div id="motivating-study" class="section level2">
 <h2><span class="header-section-number">1.1</span> Motivating study</h2>
-<p>Do differences in the effects of treatment (comparing two medications for opioid
-use disorder, naltrexone vs buprenorphine) on risk of relapse operate through
-mediators of adherence, opioid use, pain, and depressive symptoms?
-<span class="citation">(Rudolph et al. 2020)</span>
+<ul>
+<li><p>A recent, large, multi-site trial (X:BOT) compared the effectiveness of XR-NTX
+to buprenorphine–naloxone (BUP-NX) in preventing relapse among those with OUD
+starting medication in inpatient treatment settings.</p></li>
+<li><p>An analysis of potential moderators of medication effectiveness found that
+homeless individuals had a lower risk of relapse on XRNTX, whereas
+non-homeless individuals had a lower risk of relapse on BUP-NX.</p></li>
+<li><p>The effect sizes were similarly large for these groups but in opposite
+directions.</p></li>
+<li><p>The underlying mechanisms for these differences have not yet been explored. We
+can to identify these mechanisms by using mediation analysis.</p></li>
+<li><p>Key questions:</p>
+<ul>
+<li>Do differences in the effects of treatment (comparing two medications for
+opioid use disorder, naltrexone vs buprenorphine) on risk of relapse operate
+through mediators of adherence, opioid use, pain, and depressive symptoms?
+<span class="citation">(Rudolph et al. 2020)</span></li>
+<li>Are those mediated effects different for homeless vs non-homeless
+individuals?</li>
+</ul></li>
+</ul>
 <!--
 ID: Need to fix format of the following figure
---></p>
-<p><img src="img/ctndag.png" width="75%" style="display: block; margin: auto;" /></p>
+-->
+<p><img src="img/ctndag.png" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 <div id="what-is-causal-mediation-analysis" class="section level2">
 <h2><span class="header-section-number">1.2</span> What is causal mediation analysis?</h2>
 <ul>
-<li>Causal mediation analyses assess how the paths behave under interventions</li>
-<li>Statistical mediation analyses assess associations between the variables
-<!--- Causal mediation analysis is thus useful to understand mechanisms--></li>
+<li>Statistical mediation analyses assess associations between the variables</li>
+<li>Causal mediation analyses assess how the paths behave under circumstances
+different from the observed circumstances (e.g., interventions)</li>
 </ul>
+<!--- Causal mediation analysis is thus useful to understand mechanisms-->
 <div id="why-are-the-methods-that-we-will-discuss-today-important" class="section level3">
 <h3><span class="header-section-number">1.2.1</span> Why are the methods that we will discuss today important?</h3>
 <ul>
-<li>Assume you are interested in the effect of a treatment assignment <span class="math inline">\(A\)</span>
+<li>Assume you are interested in the effect of treatment assignment <span class="math inline">\(A\)</span>
 (naltrexone vs. buprenorphine) on an outcome <span class="math inline">\(Y\)</span> (risk of relapse) through
 mediators <span class="math inline">\(M\)</span> (opioid use, pain, depressive symptoms)</li>
 <li>We have pre-treatment confounders <span class="math inline">\(W\)</span></li>
@@ -1211,7 +1232,7 @@ FIGURE 1.2: Directed acyclic graph under intermediate confounders of the mediato
 <li>Here <span class="math inline">\(U=(U_W, U_A, U_Z, U_M, U_Y)\)</span> is a vector of all unmeasured exogenous
 factors affecting the system</li>
 <li>The functions <span class="math inline">\(f\)</span> are assumed fixed but unknown</li>
-<li>We posit this model as a system of equations that nature uses to geenrate the
+<li>We posit this model as a system of equations that nature uses to generate the
 data</li>
 <li>Therefore we leave the functions <span class="math inline">\(f\)</span> unspecified (i.e., we do not know the
 true nature mechanisms)</li>
@@ -1223,41 +1244,64 @@ where <span class="math inline">\(U_A\)</span> is the flip of a coin (i.e., inde
 <div id="counterfactuals" class="section level2">
 <h2><span class="header-section-number">1.4</span> Counterfactuals</h2>
 <ul>
-<li>We define all the effects of interest using <em>counterfactuals</em></li>
+<li>Recall that we are interested in assessing how the pathways would behave under circumstances different from the observed circumstances</li>
+<li>We operationalize this idea using <em>counterfactual</em> variables</li>
 <li>Counterfactuals are hypothetical random variables that would have been
 observed in an alternative world where something had happened, possibly
 contrary to fact <!--we would be able to perform interventions on the
   random variables of interest--></li>
+</ul>
+<div id="we-will-constantly-use-the-following-counterfactual-variables" class="section level3 unnumbered">
+<h3>We will constantly use the following counterfactual variables:</h3>
+<ul>
 <li><span class="math inline">\(Y_a\)</span> is a counterfactual variable in a hypothetical world where <span class="math inline">\(\P(A=a)=1\)</span>
-with probability one</li>
+with probability one for some valure <span class="math inline">\(a\)</span></li>
 <li><span class="math inline">\(Y_{a,m}\)</span> is the counterfactual outcome in a world where <span class="math inline">\(\P(A=a,M=m)=1\)</span></li>
 <li><span class="math inline">\(M_a\)</span> is the counterfactual variable representing the mediator in a world
 where <span class="math inline">\(\P(A=a)=1\)</span>.</li>
 </ul>
+</div>
 <div id="how-are-counterfactuals-defined" class="section level3">
 <h3><span class="header-section-number">1.4.1</span> How are counterfactuals defined?</h3>
 <!-- - You can use counterfactual variables as _primitives_ -->
 <ul>
 <li>In the NPSEM framework, counterfactuals are quantities <em>derived</em> from the
 model.</li>
+<li>Once you define a change to the causal system, that change needs to be
+progragated downstream.
+<ul>
+<li>Example: modifying the system to make everyone receive XR-NTX yields
+counterfactual adherence, mediators, and outcomes.</li>
+</ul></li>
 <li>Take as example the DAG in Figure 1.2:
 <span class="math display">\[\begin{align}
+  A    &amp;= a\\
+  Z_a  &amp;= f_Z(W, a, U_M)\\
+  M_a  &amp;= f_M(W, a, Z_a, U_M)\\
   Y_a  &amp;= f_Y(W, a, Z_a, M_a, U_Y)\\
-  Y_{a,m}  &amp;= f_Y(W, a, Z_a, m, U_Y)\\
-  M_a  &amp;= f_M(W, a, Z_a, U_M)
 \end{align}\]</span></li>
-<li>You can also define <em>nested counterfactuals</em></li>
+<li>We will also be interested in _joint changes to the system:
+<span class="math display">\[\begin{align}
+  A    &amp;= a\\
+  Z_a  &amp;= f_Z(W, a, U_M)\\
+  M  &amp;= m\\   
+  Y_{a,m}  &amp;= f_Y(W, a, Z_a, m, U_Y)\\
+\end{align}\]</span></li>
+<li>And, perhaps more importantly, we will use <em>nested counterfactuals</em></li>
 <li>For example, if <span class="math inline">\(A\)</span> is binary, you can think of the following counterfactual
-<span class="math display">\[\begin{equation*}
-  Y_{1, M_0} = f_Y(W, 1, Z_1, M_0, U_Y)
-\end{equation*}\]</span></li>
-<li>Interpreted as <em>the outcome for an individual in a hypothetical world where
-treatment was given but the mediator was held at the value it would have
-taken under no treatment</em></li>
-<li>Causal effects are defined in terms of the distribution of these
-counterfactuals.</li>
+<span class="math display">\[\begin{align}
+  A    &amp;= 1\\
+  Z_1  &amp;= f_Z(W, 1, U_M)\\
+  M  &amp;= M_0\\ 
+  Y_{1, M_0} &amp;= f_Y(W, 1, Z_1, M_0, U_Y)\\
+\end{align}\]</span></li>
+<li><span class="math inline">\(Y_{1, M_0}\)</span> is interpreted as <em>the outcome for an individual in a
+hypothetical world where treatment was given but the mediator was held at the
+value it would have taken under no treatment</em></li>
+<li>Causal mediation effects are often defined in terms of the distribution of these
+nested counterfactuals.</li>
 <li>That is, causal effects give you information about what would have happened
-<em>in some hypothetical world</em>.</li>
+<em>in some hypothetical world</em> where the mediator and treatment mechanisms changed.</li>
 </ul>
 
 </div>
