--- a/references.html
+++ b/references.html
@@ -1013,6 +1013,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.3.2" data-path="mediation.html"><a href="mediation.html#intermediate-confounders"><i class="fa fa-check"></i><b>1.3.2</b> Intermediate confounders</a></li>
 </ul></li>
 <li class="chapter" data-level="1.4" data-path="mediation.html"><a href="mediation.html#counterfactuals"><i class="fa fa-check"></i><b>1.4</b> Counterfactuals</a><ul>
+<li class="chapter" data-level="" data-path="mediation.html"><a href="mediation.html#we-will-constantly-use-the-following-counterfactual-variables"><i class="fa fa-check"></i>We will constantly use the following counterfactual variables:</a></li>
 <li class="chapter" data-level="1.4.1" data-path="mediation.html"><a href="mediation.html#how-are-counterfactuals-defined"><i class="fa fa-check"></i><b>1.4.1</b> How are counterfactuals defined?</a></li>
 </ul></li>
 </ul></li>
@@ -1061,13 +1062,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.1.5" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#an-example-of-the-bias-of-a-g-computation-estimator-of-the-natural-direct-effect"><i class="fa fa-check"></i><b>5.1.5</b> An example of the bias of a g-computation estimator of the natural direct effect</a></li>
 <li class="chapter" data-level="5.1.6" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-g-computation-with-data-adaptive-regression"><i class="fa fa-check"></i><b>5.1.6</b> Pros and cons of g-computation with data-adaptive regression</a></li>
 </ul></li>
-<li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation-or-correcting-the-bias-of-g-computation-estimators"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation (or correcting the bias of g-computation estimators)</a></li>
+<li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><i class="fa fa-check"></i><b>6</b> Using the EIF to construct an estimator: the case of the natural direct effect</a><ul>
 <li class="chapter" data-level="6.1" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#natural-direct-effect"><i class="fa fa-check"></i><b>6.1</b> Natural direct effect</a><ul>
 <li class="chapter" data-level="6.1.1" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#the-efficient-influence-function-for-the-nde"><i class="fa fa-check"></i><b>6.1.1</b> The efficient influence function for the NDE</a></li>
 <li class="chapter" data-level="6.1.2" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#how-to-compute-the-one-step-estimator-akin-to-augmented-ipw"><i class="fa fa-check"></i><b>6.1.2</b> How to compute the one-step estimator (akin to Augmented IPW)</a></li>
 <li class="chapter" data-level="6.1.3" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#performance-of-the-one-step-estimator-in-a-small-simulation-study"><i class="fa fa-check"></i><b>6.1.3</b> Performance of the one-step estimator in a small simulation study</a></li>
+<li class="chapter" data-level="6.1.4" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#a-note-about-targeted-minimum-loss-based-estimation-tmle"><i class="fa fa-check"></i><b>6.1.4</b> A note about targeted minimum loss-based estimation (TMLE)</a></li>
+<li class="chapter" data-level="6.1.5" data-path="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><a href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html#a-note-about-cross-fitting"><i class="fa fa-check"></i><b>6.1.5</b> A note about cross-fitting</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="r-packages-for-estimation-of-the-causal-indirect-effects.html"><a href="r-packages-for-estimation-of-the-causal-indirect-effects.html"><i class="fa fa-check"></i><b>7</b> <code>R</code> packages for estimation of the causal (in)direct effects</a><ul>
@@ -1140,6 +1143,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div>
 <p>Rudolph, Kara, Ivan Diaz, Nima Hejazi, Mark van der Laan, Sean Luo, Matisyahu Shulman, Aimee Campbell, John Rotrosen, and Edward Nunes. 2020. “Explaining Differential Effects of Medication for Opioid Use Disorder Using a Novel Approach Incorporating Mediating Variables.” <em>Addiction</em>.</p>
+</div>
+<div>
+<p>Rudolph, Kara E, Dana E Goin, Diana Paksarian, Rebecca Crowder, Kathleen R Merikangas, and Elizabeth A Stuart. 2019. “Causal Mediation Analysis with Observational Data: Considerations and Illustration Examining Mechanisms Linking Neighborhood Poverty to Adolescent Substance Use.” <em>American Journal of Epidemiology</em> 188 (3): 598–608.</p>
 </div>
 <div>
 <p>van der Laan, Mark J, Jeremy R Coyle, Nima S Hejazi, Ivana Malenica, Rachael V Phillips, and Alan E Hubbard. 2022. <em>Targeted Learning in <code>R</code>: Causal Data Science with the <code>tlverse</code> Software Ecosystem</em>. CRC Press. <a href="https://tlverse.org/tlverse-handbook">https://tlverse.org/tlverse-handbook</a>.</p>
